--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "koa-typescript-starter",
+  "name": "live-m3u8-node",
   "version": "0.1.0",
-  "description": "Koa TypeScript Starter",
+  "description": "Node 根据直播链接转 m3u8 服务",
   "main": "index.js",
   "scripts": {
     "eslint": "eslint --ext .js,.jsx,.ts,.tsx src/",
@@ -34,11 +34,13 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "koa": "^2.15.0",
     "koa-bodyparser": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "log4js": "^6.9.1",
     "pm2": "^5.3.0"
   }
 }
