--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/koa": "^2.14.0",
     "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa-logger": "^3.1.5",
     "@types/koa-router": "^7.4.8",
     "@types/node": "^20.11.0",
     "eslint": "^8.56.0",
@@ -40,6 +41,7 @@
     "js-yaml": "^4.1.0",
     "koa": "^2.15.0",
     "koa-bodyparser": "^3.2.0",
+    "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "log4js": "^6.9.1",
