--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "eslint": "eslint --ext .js,.jsx,.ts,.tsx src/",
     "eslint-fix": "eslint --ext .js,.jsx,.ts,.tsx --fix src/",
     "build": "rm -rf dist && tsc",
-    "pro": "pm2 start ecosystem.config.js --env production",
-    "restart": "pm2 restart ecosystem.config.js --env production",
-    "start": "nodemon",
+    "pro": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --env production",
+    "restart": "cross-env NODE_ENV=production pm2 restart ecosystem.config.js --env production",
+    "start": "cross-env NODE_ENV=development nodemon",
     "stop": "pm2 stop ecosystem.config.js",
     "tsc": "tsc -p tsconfig.json"
   },
@@ -21,6 +21,7 @@
     "@types/koa-logger": "^3.1.5",
     "@types/koa-router": "^7.4.8",
     "@types/node": "^20.11.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-formatter-friendly": "^7.0.0",
