--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "tsc": "tsc -p tsconfig.json"
   },
   "author": "",
+  "_moduleAliases": {
+    "@": "./dist"
+  },
   "license": "ISC",
   "devDependencies": {
     "@types/koa": "^2.14.0",
@@ -46,6 +49,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "log4js": "^6.9.1",
+    "module-alias": "^2.2.3",
     "pm2": "^5.3.0"
   }
 }
