--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eslint-fix": "eslint --ext .js,.jsx,.ts,.tsx --fix src/",
     "build": "rm -rf dist && tsc",
     "prod": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --env production",
+    "prod:docker": "cross-env NODE_ENV=production pm2-runtime start ecosystem.config.js --env production",
     "restart": "cross-env NODE_ENV=production pm2 restart ecosystem.config.js --env production",
     "start": "cross-env NODE_ENV=development nodemon",
     "stop": "pm2 stop ecosystem.config.js",
@@ -41,6 +42,7 @@
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "js-yaml": "^4.1.0",
     "koa": "^2.15.0",
@@ -49,7 +51,6 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "log4js": "^6.9.1",
-    "module-alias": "^2.2.3",
-    "pm2": "^5.3.0"
+    "module-alias": "^2.2.3"
   }
 }
